5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1756_1576.log
== TEST (2019-05-22 15:09:36) 
-- CODE:
from numpy import*
v1=array(eval(input("Jogadas eusapia: ")))
v2=array(eval(input("Jogadas barsanulfo: ")))
i=0#contadora
a=0#e
b=0#b
while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		a=a+1
	elif(v1[i]==11 and v2[i]==22):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		a=a+1
	elif(v1[i]==22 and v2[i]==33):
		b=b+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		a=a+1
	i=i+1
print(i)
if(a>b):
	print("EUSAPIA")
	elif(a<b):
		print("BARSANULFO")
		else:
			print("EMPATE")
	
-- ERROR:
File "XXXX", line 24
    elif(a<b):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:09:49) 
-- CODE:
from numpy import*
v1=array(eval(input("Jogadas eusapia: ")))
v2=array(eval(input("Jogadas barsanulfo: ")))
i=0#contadora
a=0#e
b=0#b
while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		a=a+1
	elif(v1[i]==11 and v2[i]==22):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		a=a+1
	elif(v1[i]==22 and v2[i]==33):
		b=b+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		a=a+1
	i=i+1
print(i)
if(a>b):
	print("EUSAPIA")
elif(a<b):
		print("BARSANULFO")
		else:
			print("EMPATE")
	
-- ERROR:
File "XXXX", line 26
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:10:03) 
-- CODE:
from numpy import*
v1=array(eval(input("Jogadas eusapia: ")))
v2=array(eval(input("Jogadas barsanulfo: ")))
i=0#contadora
a=0#e
b=0#b
while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		a=a+1
	elif(v1[i]==11 and v2[i]==22):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		a=a+1
	elif(v1[i]==22 and v2[i]==33):
		b=b+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		a=a+1
	i=i+1
print(i)
if(a>b):
	print("EUSAPIA")
elif(a<b):
	print("BARSANULFO")
	else:
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 26
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:10:09) 
-- CODE:
from numpy import*
v1=array(eval(input("Jogadas eusapia: ")))
v2=array(eval(input("Jogadas barsanulfo: ")))
i=0#contadora
a=0#e
b=0#b
while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		a=a+1
	elif(v1[i]==11 and v2[i]==22):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		a=a+1
	elif(v1[i]==22 and v2[i]==33):
		b=b+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		a=a+1
	i=i+1
print(i)
if(a>b):
	print("EUSAPIA")
elif(a<b):
	print("BARSANULFO")
else:
		print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:10:29) 
-- CODE:
from numpy import*
v1=array(eval(input("Jogadas eusapia: ")))
v2=array(eval(input("Jogadas barsanulfo: ")))
i=0#contadora
a=0#e
b=0#b
while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		a=a+1
	elif(v1[i]==11 and v2[i]==22):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		a=a+1
	elif(v1[i]==22 and v2[i]==33):
		b=b+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		a=a+1
	i=i+1
print(i)
if(a>b):
	print("EUSAPIA")
elif(a<b):
	print("BARSANULFO")
else:
		print("EMPATE")
	
-- EXECUTION TIME:
0.347544
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
